# feagi-rust-py-libs

./: .gitignore  ARCHITECTURE_MIGRATION_STATUS.md  Cargo.toml  README.md  build.rs  example_agent.py  example_genome_validator.py  feagi_data_processing.pyi  feagi_data_processing.pyi.template  pyproject.toml  requirements.txt  test.py  test_bindings.py  test_image.py  test_macroized.py  test_neurons.py
.cargo/: config.toml
.github/workflows/: CI.yml  pr-validation.yml  publish_pypi_rust_py_libs.yml  release.yml  staging-merging.yml  staging-pr.yml
feagi-agent-sdk-py/: Cargo.toml  pyproject.toml
feagi-agent-sdk-py/src/: lib.rs
feagi-python/: Cargo.toml  build.rs
feagi-python/src/: lib.rs.bak2  lib.rs.bak3  lib.rs.bak4
feagi/logs/: latest_run
rust_build_scripts/: io_cache_template_writer.rs  mod.rs  pyi_generator.rs
src/: IDE_setup.md  compression.rs  lib.rs  lib.rs.backup  lib.rs.bak  macro_helpers.rs  py_error.rs  zmq_api_client.rs
src/feagi_agent_sdk/: mod.rs  py_agent_client.rs  py_agent_config.rs  py_agent_type.rs
src/feagi_agent_sdk_py/: mod.rs
src/feagi_connector_core/: connector_agent.rs  mod.rs
src/feagi_connector_core/caching/: io_cache.rs  mod.rs  motor_device_cache.rs
src/feagi_connector_core/data/: descriptors.rs  image_frame.rs  json_structure.rs_disabled  misc_data.rs  mod.rs  percentages.rs  segmented_image_frame.rs
src/feagi_connector_core/data_pipeline/: descriptors.rs  io_cache.rs  mod.rs  pipeline_stage.rs  pipeline_stage_properties.rs  pipeline_stage_pytrait.rs
src/feagi_connector_core/data_pipeline/stage_properties/: identities.rs  image_pixel_value_count_threshold.rs  image_quick_diff.rs  image_segmentor.rs  image_transformer.rs  mod.rs
src/feagi_connector_core/data_pipeline/stages/: identities.rs  image_pixel_value_count_threshold.rs  image_quick_diff.rs  image_segmentor.rs  image_transformer.rs  mod.rs
src/feagi_connector_core/data_types/: descriptors.rs  gaze_properties.rs  image_filtering_settings.rs  image_frame.rs  misc_data.rs  mod.rs  percentages.rs  segmented_image_frame.rs  text_token.rs
src/feagi_connector_core/data_types/processing/: image_frame_processor.rs  image_frame_segmentator.rs  mod.rs
src/feagi_connector_core/sensory/: mod.rs  sensory_cache.rs
src/feagi_connector_core/wrapped_io_data/: mod.rs  wrapped_iodata.rs  wrapped_iotype.rs
src/feagi_data_serialization/: feagi_byte_container.rs  feagi_byte_structure_type.rs  feagi_serializable.rs  mod.rs
src/feagi_data_serialization/byte_structure/: feagi_byte_structure.rs  feagi_byte_structure.rs.disabled  feagi_byte_structure_compatible.rs  feagi_byte_structure_type.rs  feagi_byte_structure_type.rs.disabled  mod.rs
src/feagi_data_serialization/implementations/: mod.rs
src/feagi_data_structures/: mod.rs
src/feagi_data_structures/basic_components/: mod.rs
src/feagi_data_structures/data/: descriptors.rs  feagi_json.rs  image_descriptors.rs  image_frame.rs  misc_data.rs  mod.rs  percentages.rs  segmented_image_frame.rs
src/feagi_data_structures/genomic/: cortical_id.rs  cortical_type.rs  descriptors.rs  mod.rs  motor_cortical_unit.rs  sensory_cortical_unit.rs
src/feagi_data_structures/genomic/brain_regions/: mod.rs
src/feagi_data_structures/genomic/cortical_area/: cortical_id.rs  cortical_type.rs  descriptors.rs  io_cortical_area_data_flag.rs  mod.rs
src/feagi_data_structures/genomic/cortical_areas/: cortical_id.rs  cortical_type.rs  io_cortical_area_data_flag.rs  mod.rs
src/feagi_data_structures/neurons/xyzp/: cortical_mapped_xyzp_data.rs  mod.rs  neuron_xyzp.rs  neuron_xyzp_arrays.rs
src/feagi_data_structures/neurons_voxels/: README.md
src/feagi_data_structures/neurons_voxels/xyzp/: README.md  cortical_mapped_xyzp_voxel_data.rs  mod.rs  neuron_voxel_xyzp.rs  neuron_voxel_xyzp_arrays.rs
src/feagi_data_structures/processing/: image_frame_processor.rs  image_frame_segmentator.disabled  image_frame_segmentator.rs  mod.rs
src/feagi_data_structures/wrapped_io_data/: WrappedIOData.rs  WrappedIOType.rs  mod.rs  wrapped_iodata.rs  wrapped_iotype.rs
src/feagi_evo/: mod.rs  validator.rs
src/feagi_python/: mod.rs
src/genomic_structures/: cortical_id.rs  cortical_type.rs  index_types.rs  mod.rs  single_channel_dimensions.rs
src/io_data/: io_types.rs  mod.rs  ranged_floats.rs
src/io_data/image/: descriptors.rs  image_frame.rs  image_frame_segmentator.rs  image_frame_transformer.rs  mod.rs  segmented_vision_frame.rs
src/io_processing/: io_caches.rs  io_caches.rs.disabled  mod.rs
src/io_processing/byte_structures/: feagi_byte_structure.rs  feagi_byte_structure_compatible.rs  feagi_byte_structure_type.rs  mod.rs
src/io_processing/caches/: mod.rs  sensory_cache.rs
src/io_processing/stream_cache_processors/: float.rs  mod.rs  stream_cache_processor_trait.rs
src/io_processing/stream_cache_processors/processors/: identities.rs  image_quick_diff.rs  image_segmentor.rs  image_transformer.rs  mod.rs  ranges.rs  rolling_windows.rs
src/neuron_data/: mod.rs
src/neuron_data/xyzp/: README.md  cortical_mapped_xyzp_data.rs  mod.rs  neuron_xyzp.rs  neuron_xyzp_arrays.rs
src/neuron_data/xyzp/coders/: coder_types.rs  mod.rs
src/useful_macros/: mod.rs  py_enum_wrapping.rs  py_struct_wrapping.rs  py_struct_wrapping_with_inheritance.rs  py_wrapping.rs
