[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[package]
name = "feagi_rust_py_libs"
version = "0.0.82"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "feagi_rust_py_libs"
crate-type = ["cdylib"]

[dependencies]
feagi-agent = { version = "0.0.1-beta.2" }
feagi-sensorimotor = { version = "0.0.1-beta.2" }
feagi-serialization = { version = "0.0.1-beta.2" }
feagi_data_structures = { package = "feagi-structures", version = "0.0.1-beta.2" }
numpy = "0.27.1"
ndarray = "0.17"
paste = "1.0.15"
serde_json = "1.0.145"
zmq = "0.10.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokenizers = "0.15.2"
heck = "0.5"


[build-dependencies]
feagi_data_structures = { package = "feagi-structures", version = "0.0.1-beta.2" }
heck = "0.5"

[dependencies.pyo3]
version = "0.27.2"
features = ["abi3-py38", "multiple-pymethods"] # "abi3-py38" tells pyo3 (and maturin) to rust_build_scripts using the stable ABI with minimum Python version 3.8

