[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "feagi-rust-py-libs"
description = "Rust-powered Python libraries for FEAGI data processing, sensorimotor encoding, and agent communication"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Neuraville Inc.", email = "feagi@neuraville.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Neuraville/FEAGI-2.0"
"Bug Tracker" = "https://github.com/Neuraville/FEAGI-2.0/issues"
"Documentation" = "https://docs.feagi.org"

[tool.maturin]
features = ["pyo3/extension-module"]
#include = ["feagi_data_processing.pyi"]
